--- a/src/translations/bn.json
+++ b/src/translations/bn.json
@@ -1462,7 +1462,7 @@
   "1730081262": "আপনার প্রিয় ব্র্যান্ডকে স্পট করুন?",
   "1733606989": "0.50",
   "1733660945": "নিশ্চিত হওয়ার সাথে সাথে ফান্ড পাওয়া যাবে",
-  "1734442908": "CFD সহ 'জটিল পণ্য' হিসাবে শ্রেণীবদ্ধ করা হয় এবং খুচরা ক্লায়েন্টদের জন্য উপযুক্ত নাও হতে পারে। CFD হল জটিল যন্ত্র এবং লিভারেজের কারণে দ্রুত অর্থ হারানোর উচ্চ ঝুঁকি নিয়ে আসে। এই প্রদানকারীর সাথে CFD ট্রেড করার সময় খুচরা বিনিয়োগকারীদের অ্যাকাউন্টের 73% অর্থ হারায়। আপনার বিবেচনা করা উচিত যে আপনি CFDগুলি কীভাবে কাজ করে তা বোঝেন কিনা এবং আপনার অর্থ হারানোর উচ্চ ঝুঁকি নিতে পারেন কিনা।",
+  "1734442908": "এই ওয়েবসাইটে অফার করা CFD এবং অন্যান্য পণ্যগুলি হল জটিল যন্ত্র, যার লিভারেজের কারণে দ্রুত অর্থ হারানোর উচ্চ ঝুঁকি রয়েছে। <0>{{loss_percent}}% খুচরা বিনিয়োগকারীর অ্যাকাউন্টগুলি Deriv-এর সাথে CFD ট্রেড করার সময় অর্থ হারায়।</0> এই পণ্যগুলি কীভাবে কাজ করে এবং আপনি আপনার অর্থ হারানোর ঝুঁকি নিতে পারেন কিনা তা আপনি বুঝতে পারেন কিনা তা বিবেচনা করা উচিত",
   "1734683614": "প্রধান নির্বাহী কর্মকর্তা",
   "1736625026": "সংগ্রাহক কি?",
   "1739086943": "ওয়াল স্ট্রিট 30",
@@ -1733,7 +1733,7 @@
   "2047349922": "0.013",
   "2048307729": "দৈনিক একাধিক জমা এবং উত্তোলনে Deriv ক্লায়েন্টদের সহায়তা করুন।",
   "2051986867": "সুতরাং একটি সোয়াপ চার্জ প্রয়োজন হবে <0>0.24 USD</0> যার পজিশন এক রাতের জন্য উন্মুক্ত।",
-  "2053673142": "“ডেমো অ্যাকাউন্ট তৈরি করুন” এক চাপে, আপনি নিশ্চিত করুন যে আপনার বয়স 18 বা তার বেশি। আপনি বুঝতে পারেন যে আমরা Deriv পণ্য এবং পরিষেবাগুলির পাশাপাশি মার্কেটের খবর সম্পর্কে তথ্য পাঠাতে আপনার ইমেইল ঠিকানা ব্যবহার করতে পারি। আপনি সবসময় আপনার অ্যাকাউন্ট সেটিংসে এই ইমেইল থেকে সদস্যতা ত্যাগ করতে পারেন। আরও তথ্যের জন্য, দয়া করে Deriv এর <0>নিরাপত্তা এবং গোপনীয়তা</0>দেখুন।",
+  "2053673142": "“ডেমো অ্যাকাউন্ট তৈরি করুন” টিপে, আপনি নিশ্চিত করুন যে আপনার বয়স 18 বা তার বেশি। আপনি বুঝতে পারেন যে আমরা Deriv পণ্য এবং পরিষেবাগুলির পাশাপাশি মার্কেটের খবর সম্পর্কে তথ্য পাঠাতে আপনার ইমেল ঠিকানা ব্যবহার করতে পারি। আপনি সবসময় আপনার অ্যাকাউন্ট সেটিংসে এই ইমেল থেকে সদস্যতা ত্যাগ করতে পারেন। আরও তথ্যের জন্য, দয়া করে Deriv এর <0>নিরাপত্তা এবং গোপনীয়তা</0>দেখুন।",
   "2053957629": "অস্থিতিশীলতা সূচকগুলির জন্য <0>প্রতি সেকেন্ডে</0> <0>একটি টিক</0> উৎপন্ন হয় <0>10 (1s), 25 (1s), 50 (1s), 75 (1s), 100 (1s), 150 (1s), এবং 250 (1s)</0>.।",
   "2056079566": "আমাদের সাহায্য নিন",
   "2056339251": "15 - 10,000",
