--- a/src/translations/es.json
+++ b/src/translations/es.json
@@ -178,7 +178,7 @@
   "224650827": "IOT/USD",
   "227166061": "¿Es Deriv.com seguro?",
   "228957856": "Supongamos que desea mantener una noche abiertos 0,01 lotes de Índice de Volatilidad 75 con un precio del activo de 400.000 USD y una tasa de swap de -7,5.",
-  "229966861": "Utilízalo en tu navegador",
+  "229966861": "Utilícelo en su navegador",
   "230596356": "Personalice su estrategia DBot",
   "230864514": "El nivel de stop loss y/o take profit le ayuda a gestionar su riesgo cuando vende un contrato.",
   "231711709": "Opere en cualquier momento",
