--- a/src/translations/it.json
+++ b/src/translations/it.json
@@ -1413,7 +1413,7 @@
   "1674164323": "<0>Con un moltiplicatore x500</0>, se il mercato registra un calo del 2%, <1>perderai solo 100 dollari</1>. Se la perdita raggiunge l'importo della puntata, subentra automaticamente lo stop-out.",
   "1674363165": "di trader in tutto il mondo",
   "1676292946": "Il trading su Forex ti permette di ottenere profitti dalle oscillazioni dei valori valutari relativi nel mercato Forex.",
-  "1677027187": "Mercato dei cambi",
+  "1677027187": "Forex",
   "1677257775": "Kenya",
   "1677553724": "Vuole saperne di più su Deriv P2P? Visiti il nostro <0>Centro Assistenza</0>.",
   "1677622373": "Tipo di conto",
