--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -1413,7 +1413,7 @@
   "1674164323": "<0>Bei einem x500-Multiplikator</0> <1>verlieren Sie nur 100$</1>, wenn der Markt um 2% fällt. Ein automatischer Stop-Out tritt ein, wenn Ihr Verlust Ihren Einsatzbetrag erreicht.",
   "1674363165": "Händler weltweit",
   "1676292946": "Der Devisenhandel gibt Ihnen die Möglichkeit, von Änderungen der relativen Werte der Währungen auf dem Forex-Markt zu profitieren.",
-  "1677027187": "Devisen",
+  "1677027187": "Forex",
   "1677257775": "Kenia",
   "1677553724": "Sie möchten mehr über Deriv P2P erfahren? Besuchen Sie unser <0>Hilfe-Center</0>.",
   "1677622373": "Konto-Typ",
